# Bedrocked

./: CMakeLists.txt  README.md
app/: CMakeLists.txt  main.cpp
engine/: CMakeLists.txt
engine/include/bedrocked/assets/: Image.hpp
engine/include/bedrocked/core/: Application.hpp
engine/include/bedrocked/gameplay/: BlockInteractor.hpp  GameState.hpp  Hotbar.hpp  InventorySlot.hpp  Player.hpp
engine/include/bedrocked/input/: Key.hpp  MouseButton.hpp
engine/include/bedrocked/math/: Matrix4.hpp  Vector3.hpp
engine/include/bedrocked/platform/: Window.hpp
engine/include/bedrocked/rendering/: Camera.hpp  ChunkRenderer.hpp  Mesh.hpp  Renderer.hpp
engine/include/bedrocked/rendering/opengl/: Texture2D.hpp
engine/include/bedrocked/rendering/texture/: TextureAtlasLayout.hpp
engine/include/bedrocked/ui/: CrosshairUI.hpp  DebugOverlay.hpp  HotbarUI.hpp  ImGuiLayer.hpp  PauseMenu.hpp
engine/include/bedrocked/world/: World.hpp
engine/include/bedrocked/world/block/: BlockPosition.hpp  BlockProperties.hpp  BlockRaycast.hpp  BlockType.hpp
engine/include/bedrocked/world/chunk/: BlockFace.hpp  Chunk.hpp  ChunkCoordinates.hpp  ChunkManager.hpp  ChunkMeshData.hpp  ChunkMesher.hpp  ChunkMeshing.hpp  ChunkNeighbors.hpp  ChunkPosition.hpp  ChunkTransforms.hpp
engine/include/bedrocked/world/generation/: FractalNoise.hpp  TerrainGenerator.hpp  TerrainHeight.hpp  TreePlacement.hpp  ValueNoise.hpp  ValueNoise3D.hpp
engine/src/assets/: Image.cpp
engine/src/core/: Application.cpp  Logger.cpp  Timer.cpp
engine/src/gameplay/: BlockInteractor.cpp  Player.cpp
engine/src/platform/: Window.cpp
engine/src/rendering/: Camera.cpp  ChunkRenderer.cpp  Mesh.cpp  Renderer.cpp
engine/src/rendering/opengl/: IndexBuffer.cpp  ShaderProgram.cpp  Texture2D.cpp  VertexArray.cpp  VertexBuffer.cpp
engine/src/ui/: CrosshairUI.cpp  DebugOverlay.cpp  HotbarUI.cpp  ImGuiLayer.cpp  PauseMenu.cpp
engine/src/world/: World.cpp
engine/src/world/block/: BlockRaycast.cpp
engine/src/world/chunk/: Chunk.cpp  ChunkManager.cpp  ChunkMesher.cpp
engine/src/world/generation/: FractalNoise.cpp  TerrainGenerator.cpp  ValueNoise.cpp  ValueNoise3D.cpp
src/: main.cpp
src/bedrocked/: Application.cpp
src/bedrocked/assets/: Image.cpp
src/bedrocked/core/: Application.cpp  Application.hpp  Logger.cpp  Logger.hpp  Timer.cpp  Timer.hpp
src/bedrocked/input/: Key.hpp
src/bedrocked/math/: Matrix4.hpp
src/bedrocked/platform/: Window.cpp  Window.hpp
src/bedrocked/rendering/: Camera.cpp  Camera.hpp  IndexBuffer.cpp  IndexBuffer.hpp  Mesh.cpp  Mesh.hpp  Renderer.cpp  Renderer.hpp  ShaderProgram.cpp  ShaderProgram.hpp  Texture2D.cpp  TextureAtlasLayout.hpp  TextureRegion.hpp  Vertex.hpp  VertexArray.cpp  VertexArray.hpp  VertexBuffer.cpp  VertexBuffer.hpp
